packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_parsed_inlined_qrls.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1503
expression: output
---
==INPUT==


import { componentQrl, inlinedQrl, useStore, jsxs, jsx, useLexicalScope } from '@khulnasoft.com/qwik';

export const App = /*#__PURE__*/ componentQrl(inlinedQrl(()=>{
    useStyles$(inlinedQrl(STYLES, "STYLES_odz7dfdfdM"));
    useStyles$(inlinedQrl(STYLES, "STYLES_odzdfdfdM"));

    const store = useStore({
        count: 0
    });
    return /*#__PURE__*/ jsxs("div", {
        children: [
            /*#__PURE__*/ jsxs("p", {
                children: [
                    "Count: ",
                    store.count
                ]
            }),
            /*#__PURE__*/ jsx("p", {
                children: /*#__PURE__*/ jsx("button", {
                    onClick$: inlinedQrl(()=>{
                        const [store] = useLexicalScope();
                        return store.count++;
                    }, "App_component_div_p_button_onClick_odz7eidI4GM", [
                        store
                    ]),
                    children: "Click"
                })
            })
        ]
    });
}, "App_component_Fh88JClhbC0"));

export const STYLES = ".red { color: red; }";


============================= test.tsx ==

import { _fnSignal } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import { componentQrl, inlinedQrl, useStore, useLexicalScope } from '@khulnasoft.com/qwik';
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    useStyles$(/*#__PURE__*/ inlinedQrl(STYLES, "s_odz7dfdfdM"));
    useStyles$(/*#__PURE__*/ inlinedQrl(STYLES, "s_odzdfdfdM"));
    const store = useStore({
        count: 0
    });
    return /*#__PURE__*/ _jsxQ("div", null, null, [
        /*#__PURE__*/ _jsxQ("p", null, null, [
            "Count: ",
            _fnSignal((p0)=>p0.count, [
                store
            ], "p0.count")
        ], 3, null),
        /*#__PURE__*/ _jsxQ("p", null, null, /*#__PURE__*/ _jsxQ("button", {
            onClick$: /*#__PURE__*/ inlinedQrl(()=>{
                const [store] = useLexicalScope();
                return store.count++;
            }, "s_odz7eidI4GM", [
                store
            ])
        }, null, "Click", 2, null), 1, null)
    ], 1, "u6_0");
}, "s_Fh88JClhbC0"));
export const STYLES = ".red { color: red; }";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AACA,SAAS,YAAY,EAAE,UAAU,EAAE,QAAQ,EAAa,eAAe,QAAQ,mBAAmB;AAElG,OAAO,MAAM,MAAM,WAAW,GAAG,sCAAwB;IACrD,oCAAsB;IACtB,oCAAsB;IAEtB,MAAM,QAAQ,SAAS;QACnB,OAAO;IACX;IACA,OAAO,WAAW,GAAG,MAAK,mBACZ;QACN,WAAW,GAAG,MAAK,iBACL;YACN;4BACA,GAAM,KAAK;;;SACd;QAEL,WAAW,GAAG,MAAI,iBACJ,WAAW,GAAG,MAAI;YACxB,QAAQ,2BAAa;gBACjB,MAAM,CAAC,MAAM,GAAG;gBAChB,OAAO,MAAM,KAAK;YACtB;;;iBAGU;KAGrB;AAET,qBAAiC;AAEjC,OAAO,MAAM,SAAS,uBAAuB\"}")
== DIAGNOSTICS ==

[]
