packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_prod_node.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1346
expression: output
---
==INPUT==


import { component$ } from '@khulnasoft.com/qwik';

export const Foo = component$(() => {
    return (
        <div>
            <div onClick$={() => console.log('first')}/>
            <div onClick$={() => console.log('second')}/>
            <div onClick$={() => console.log('third')}/>
        </div>
    );
});

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/qwik";
export const s_HTDRsvUbLiE = ()=>{
    return <div>
            <div onClick$={/*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_div_div_onClick_9DcJc0uJDDo"), "s_9DcJc0uJDDo")}/>
            <div onClick$={/*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_div_div_onClick_1_RjQdy8I0MXc"), "s_RjQdy8I0MXc")}/>
            <div onClick$={/*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_div_div_onClick_2_w9ptFRBVK1E"), "s_w9ptFRBVK1E")}/>
        </div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";6BAG8B;IAC1B,QACK,IAAI;YACD,CAAC,IAAI,mHAAuC;YAC5C,CAAC,IAAI,qHAAwC;YAC7C,CAAC,IAAI,qHAAuC;QAChD,EAAE;AAEV\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    80,
    310
  ]
}
*/
============================= test.tsx_Foo_component_div_div_onClick_9DcJc0uJDDo.tsx (ENTRY POINT)==

export const s_9DcJc0uJDDo = ()=>console.log('first');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6BAM2B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_9DcJc0uJDDo",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_onClick",
  "hash": "9DcJc0uJDDo",
  "canonicalFilename": "test.tsx_Foo_component_div_div_onClick_9DcJc0uJDDo",
  "path": "",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    142,
    168
  ]
}
*/
============================= test.tsx_Foo_component_div_div_onClick_2_w9ptFRBVK1E.tsx (ENTRY POINT)==

export const s_w9ptFRBVK1E = ()=>console.log('third');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6BAQ2B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_w9ptFRBVK1E",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_onClick_2",
  "hash": "w9ptFRBVK1E",
  "canonicalFilename": "test.tsx_Foo_component_div_div_onClick_2_w9ptFRBVK1E",
  "path": "",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    257,
    283
  ]
}
*/
============================= test.tsx_Foo_component_div_div_onClick_1_RjQdy8I0MXc.tsx (ENTRY POINT)==

export const s_RjQdy8I0MXc = ()=>console.log('second');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6BAO2B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_RjQdy8I0MXc",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_onClick_1",
  "hash": "RjQdy8I0MXc",
  "canonicalFilename": "test.tsx_Foo_component_div_div_onClick_1_RjQdy8I0MXc",
  "path": "",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    199,
    226
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "s_HTDRsvUbLiE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,qGAQhB\"}")
== DIAGNOSTICS ==

[]
